plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/absentArgument.kt
// ERROR: Return type mismatch: expected 'kotlin.Unit', actual 'J'.
class J(x: Int, y: Int) {
    fun foo() {
        return J(0, TODO("Cannot convert element"))
    }
}
